login page scrollbar fixed

--- a/components/LoginForm.module.css
+++ b/components/LoginForm.module.css
@@ -4,8 +4,10 @@
   align-items: center;
   justify-content: center;
   /* background-color: #d71010; */
-  height: 100vh;
+  height: 80vh;
   width: 100%;
+  /* overflow: hidden;  */
+
   }
 .loginContainer {
     background-color: #FBFCF6;
