--- a/components/RegisterForm.module.css
+++ b/components/RegisterForm.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   /* background-color: #d71010; */
-  height: 100vh;
+  height: 80vh;
   width: 100%;
   }
 .registerContainer {
